# gp_election_db

./: .gitattributes  .gitignore  README.md  pyproject.toml
archive/: test.py  test_elections.db
output/: results-metadata.json
output/0/: 0.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  (+89 more)
output/1/: 0.csv  139.csv  140.csv  141.csv  142.csv  143.csv  144.csv  145.csv  146.csv  147.csv  148.csv  149.csv  150.csv  152.csv  153.csv  154.csv  155.csv  156.csv  157.csv  158.csv  160.csv  161.csv  163.csv  165.csv  168.csv  172.csv  173.csv  174.csv  177.csv  179.csv  180.csv  182.csv  183.csv  186.csv  194.csv  196.csv  197.csv  198.csv  200.csv  208.csv  (+19 more)
output/10/: 0.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  40.csv  41.csv  42.csv  43.csv  (+56 more)
output/100/: 0.csv  190.csv  191.csv  192.csv  193.csv  194.csv  195.csv  196.csv  197.csv  198.csv  199.csv  200.csv  201.csv  202.csv  203.csv  (+118 more)
precincts/: check-json.sh
scripts/: check_geojson_dups.py  create_precinct_id.py  import_elections.py  import_geometries.py  reset_tables.py
(+5643 files in other folders)
