[project]
name = "cgp-election-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.1",
    "geopandas>=1.0.1",
    "ipython>=9.0.2",
    "logging>=0.4.9.6",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "shapely>=2.0.7",
]
